# registration-and-authentication-form

./: README.md
release/: CMakeLists.txt  authwindow.cpp  authwindow.h  authwindow.ui  mainwindow.cpp  mainwindow.h  regwindow.cpp  regwindow.h  regwindow.ui
